--- a/krm-functions/templater/local-resource/example-use.yaml
+++ b/krm-functions/templater/local-resource/example-use.yaml
@@ -1,15 +1,9 @@
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-apiVersion: airshipit.org/v1alpha1
+apiVersion: airshipit.org/v1alpha1 # Licensed under the Apache License, Version 2.0 (the "License");
 kind: Templater
 metadata:
   annotations:
@@ -20,8 +14,10 @@ values:
   hosts:
   - macAddress: 00:aa:bb:cc:dd
     name: node-1
+    ipv4: 192.168.1.1
   - macAddress: 00:aa:bb:cc:ee
     name: node-2
+    ipv4: 192.168.1.2
 template: |
   {{ range .hosts -}}
   ---
@@ -31,4 +27,5 @@ template: |
     name: {{ .name }}
   spec:
     bootMACAddress: {{ .macAddress }}
+    ipv4: {{ .ipv4 }}
   {{ end -}}
